Auf java 11 umgestellt server hochgeladen