@@ -1,5 +1,7 @@
 package at.aau.serg.websocketserver.websocket.broker;
 
+import java.util.stream.Collectors;
+
 import at.aau.serg.websocketserver.game.GameController;
 import at.aau.serg.websocketserver.game.GameLogic;
 import at.aau.serg.websocketserver.game.PlayerTurnManager;
@@ -45,21 +47,11 @@ public class WebSocketBrokerController {
         playerService = PlayerService.getInstance();
         lobbyService = LobbyService.getInstance();
         this.boardService = boardService;
-    }
-
-    @MessageMapping("/move")
+    }    @MessageMapping("/move")
     public void handleMove(StompMessage message) {
-        int playerId;
-        try {
-            playerId = Integer.parseInt(message.getPlayerName()); // Annahme: playerName = ID
-        } catch (NumberFormatException e) {
-            messagingTemplate.convertAndSend("/topic/game",
-                    new OutputMessage(message.getPlayerName(), "❌ Ungültige Spieler-ID", LocalDateTime.now().toString()));
-            return;
-        }
+        String playerId = message.getPlayerName(); // Verwende direkt den playerName als ID
 
-        String action = message.getAction();
-        // Prüfe, ob es ein "join:X" Befehl ist (Spieler betritt das Spielfeld)
+        String action = message.getAction();        // Prüfe, ob es ein "join:X" Befehl ist (Spieler betritt das Spielfeld)
         if (action != null && action.startsWith("join:")) {
             try {
                 int startFieldIndex = Integer.parseInt(action.substring(5));
@@ -69,7 +61,7 @@ public class WebSocketBrokerController {
                 // Get the possible next fields
                 List<Integer> nextPossibleFieldIndices = new ArrayList<>();
                 for (Field nextField : boardService.getValidNextFields(playerId)) {
-                    nextPossibleFieldIndices.add(nextField.getIndex());
+                    nextPossibleFieldIndices.add(Integer.valueOf(nextField.getIndex()));
                 }
 
                 MoveMessage moveMessage = new MoveMessage(
@@ -96,7 +88,7 @@ public class WebSocketBrokerController {
                     Field currentField = boardService.getPlayerField(playerId);
                     List<Integer> nextPossibleFieldIndices = new ArrayList<>();
                     for (Field nextField : boardService.getValidNextFields(playerId)) {
-                        nextPossibleFieldIndices.add(nextField.getIndex());
+                        nextPossibleFieldIndices.add(Integer.valueOf(nextField.getIndex()));
                     }
 
                     MoveMessage moveMessage = new MoveMessage(
@@ -127,9 +119,7 @@ public class WebSocketBrokerController {
             messagingTemplate.convertAndSend("/topic/game",
                     new OutputMessage(message.getPlayerName(), "❌ Ungültige Würfelzahl", LocalDateTime.now().toString()));
             return;
-        }
-
-        // Prüfe ob eine bestimmte Ausgangsposition mitgeschickt wurde
+        }        // Prüfe ob eine bestimmte Ausgangsposition mitgeschickt wurde
         int currentFieldIndex;
         if (message.getAction().contains(":")) {
             String[] parts = message.getAction().split(":");
@@ -146,10 +136,11 @@ public class WebSocketBrokerController {
             }
         }
 
-        boardService.movePlayer(playerId, steps);                Field currentField = boardService.getPlayerField(playerId);
-                List<Integer> nextPossibleFieldIndices = new ArrayList<>();
-                for (Field nextField : boardService.getValidNextFields(playerId)) {
-                    nextPossibleFieldIndices.add(nextField.getIndex());
+        boardService.movePlayer(playerId, steps);                
+        Field currentField = boardService.getPlayerField(playerId);
+        List<Integer> nextPossibleFieldIndices = new ArrayList<>();
+        for (Field nextField : boardService.getValidNextFields(playerId)) {
+                    nextPossibleFieldIndices.add(Integer.valueOf(nextField.getIndex()));
                 }
 
                 MoveMessage moveMessage = new MoveMessage(
@@ -177,16 +168,20 @@ public class WebSocketBrokerController {
     public void handleLobby(@Payload StompMessage message) {
         String action = message.getAction();
         String gameId = message.getGameId();
-        String content;
-
-        if (action == null) {
+        String content;        if (action == null) {
             content = "❌ Keine Aktion angegeben.";
         } else {
-            content = switch (action) {
-                case "createLobby" -> "🆕 Lobby [" + gameId + "] von " + message.getPlayerName() + " erstellt.";
-                case "joinLobby" -> "✅ " + message.getPlayerName() + " ist Lobby [" + gameId + "] beigetreten.";
-                default -> "Unbekannte Lobby-Aktion.";
-            };
+            switch (action) {
+                case "createLobby":
+                    content = "🆕 Lobby [" + gameId + "] von " + message.getPlayerName() + " erstellt.";
+                    break;
+                case "joinLobby":
+                    content = "✅ " + message.getPlayerName() + " ist Lobby [" + gameId + "] beigetreten.";
+                    break;
+                default:
+                    content = "Unbekannte Lobby-Aktion.";
+                    break;
+            }
         }
 
         System.out.println("[LOBBY] [" + gameId + "] " + message.getPlayerName() + ": " + content);
@@ -239,15 +234,14 @@ public class WebSocketBrokerController {
     public void handleChat(@Payload StompMessage message) {
         messagingTemplate.convertAndSend("/topic/chat",
                 new OutputMessage(message.getPlayerName(), message.getMessageText(), LocalDateTime.now().toString()));
-    }
-
-    @MessageMapping("/game/start/{gameId}")
-    public void handleGameStart(@DestinationVariable int gameId) {
+    }    @MessageMapping("/game/start/{gameId}")
+    public void handleGameStart(@DestinationVariable String gameId) {
+        int gameIdInt = Integer.parseInt(gameId);
         // 1. Repository vorbereiten
-        jobService.getOrCreateRepository(gameId);
+        jobService.getOrCreateRepository(gameIdInt);
 
         // 2. Lobby und Spieler holen
-        Lobby lobby = LobbyService.getInstance().getLobby(Integer.toString(gameId));
+        Lobby lobby = LobbyService.getInstance().getLobby(gameId);
         if (lobby == null || lobby.isStarted()) {
             System.out.println("[WARNUNG] Lobby nicht gefunden oder bereits gestartet: " + gameId);
             return;
@@ -255,7 +249,7 @@ public class WebSocketBrokerController {
 
         // 3. GameLogic erzeugen
         GameLogic gameLogic = new GameLogic();
-        gameLogic.setGameId(gameId);
+        gameLogic.setGameId(gameIdInt);
         gameLogic.setJobService(jobService);
         gameLogic.setBoardService(boardService);
         gameLogic.setGameController(new GameController(gameLogic, messagingTemplate));
@@ -332,10 +326,9 @@ public class WebSocketBrokerController {
                         j.isTaken(),
                         gameId
                 ))
-                .toList();
+                .collect(Collectors.toList());
 
-        String dest = String.format("/topic/%d/jobs/%s", gameId, playerName);
-        messagingTemplate.convertAndSend(dest, dtos);
+
     }
 
     @MessageMapping("/jobs/{gameId}/{playerName}/select")
@@ -352,5 +345,10 @@ public class WebSocketBrokerController {
 
         repo.findJobById(msg.getJobId())
                 .ifPresent(job -> repo.assignJobToPlayer(playerName, job));
+    }    @MessageMapping("/board/data")
+    @SendTo("/topic/board/data")
+    public BoardDataMessage getBoardData() {
+        // Return the complete board data with timestamp
+        return new BoardDataMessage(boardService.getBoard(), LocalDateTime.now().toString());
     }
 }
